Added AboutUs section

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
             <div class="section-title justify-content-md-center">
                 <h1>Najnowsze produkty</h1>
-                <a href="#" class="btn-primary-outlined">Zobacz wszystkie produkty</a>
+                <a href="#" class="btn-primary-outlined">Zobacz wszystkie <span class="display-sm-none">produkty</span></a>
             </div>
 
             <div class="row">
@@ -157,14 +157,14 @@
 
             <div class="section-title justify-content-md-center">
                 <h1 class="mr-md-2 mr-sm-0">Aktualności</h1>
-                <a href="#" class="btn-primary-outlined">Zobacz wszystkie aktualności</a>
+                <a href="#" class="btn-primary-outlined">Zobacz wszystkie <span class="display-sm-none">aktualności</span></a>
             </div>
 
             <div class="row">
 
                 <div class="col-6 col-md-12 news-container">
                     <div class="row">
-                        <div class="col-6 col-sm-12">
+                        <div class="col-6 col-sm-12 mb-sm-3">
                             <a href="#" title="Title">
                                 <div class="img-container">
                                     <img src="img/product01.png" alt="Product02">
@@ -185,6 +185,47 @@
                     </div>
                 </div>
 
+                <div class="col-6 col-md-12 news-container">
+                    <div class="row">
+                        <div class="col-6 col-sm-12 mb-sm-3">
+                            <a href="#" title="Title">
+                                <div class="img-container">
+                                    <img src="img/product01.png" alt="Product02">
+                                </div>
+                            </a>
+                        </div>
+                        <div class="col-6 col-sm-12">
+                            <h2>Bezdotykowy dozownik do dezynfekcji rąk, 350 ml</h2>
+                            <div class="news-info">
+                                <i class="icon feather icon-calendar"></i>
+                                22 października 2020
+                            </div>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia labore in omnis culpa, possimus dignissimos...</p>
+                            <a class="more-link" href="#">
+                                Czytaj więcej...
+                            </a>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+
+        <div class="section aboutus-section">
+            <div class="container">
+                <div class="row">
+                    <div class="col-6 col-md-4 col-sm-12 order-sm-2">
+                        <div class="img-container">
+                            <img src="img/aboutus_img.png" alt="">
+                        </div>
+                    </div>
+                    <div class="col-6 col-md-8 col-sm-12 order-sm-1 mb-sm-3">
+                        <h2>Czym jest, naszym zdaniem, Piambo?</h2>
+                        <p><strong>Być może wielu z Was Piambo kojarzy się z... bajkowym światem, postacią magiczną, wyrwaną z jakiejś opowieści :) Dla nas Piambo to taki ktoś, a raczej takie coś, co pomaga rodzicom w opiece nad dzieckiem i wraz z nimi czuwa nad nim o każdej porze dnia i nocy.</strong></p>
+                        <p>Piambo nie pozwoli, by Twojemu dziecku stała się krzywda w domu, na spacerze czy w podróży! Pomoże Wam też w innych dziedzinach codziennego życia Waszego malucha, takich jak karmienie, nauka sikania i chodzenia, zabawa czy pielęgnacja. I choć Piambo brzmi fantastycznie, to realnie wspiera rodziców w ich codziennych zmaganiach.</p>
+                        <a href="#" class="btn-primary">Zobacz więcej</a>
+                    </div>
+                </div>
             </div>
         </div>
 
