Added AboutUs section

--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
                     </ul>
                 </nav>
 
-                <nav class="nav-mobile">
+                <nav class="nav-mobile display-none display-md-block">
                     <ul>
-                        <li><a href="#"><i class="icon feather icon-shopping-cart t-120"></i></a></li>
-                        <li><a href="#"><i class="icon feather icon-user t-120"></i></a></li>
+                        <!--<li><a href="#"><i class="icon feather icon-shopping-cart t-120"></i></a></li>-->
+                        <!--<li><a href="#"><i class="icon feather icon-user t-120"></i></a></li>-->
                         <li><a href="#"><i class="icon feather icon-menu t-120"></i></a></li>
                     </ul>
                 </nav>
@@ -246,6 +246,8 @@
             </a>
         </div>
     </footer>
+
+    <script src="js/script.js"></script>
 
 </body>
 </html>
