Added contact section

--- a/index.html
+++ b/index.html
@@ -229,6 +229,42 @@
             </div>
         </div>
 
+        <div class="container section contact-section">
+
+            <div class="section-title justify-content-md-center">
+                <h1>Skontaktuj się z nami</h1>
+            </div>
+
+            <div class="row">
+                <div class="col-4 col-md-12 contact-info">
+                    <h3>Montanus Sp. z o.o.</h3>
+                    <p>Łętownia 585<br />34-242 Łętownia</p>
+                    <p>NIP: 552-171-37-45<br />REGON: 122493940</p>
+                </div>
+                
+                <div class="col-4 col-md-6 col-sm-12 contact-action">
+                    <span class="contact-data">
+                        <i class="icon feather icon-phone"></i>500&nbsp;802&nbsp;805
+                    </span>
+                    <a href="#" class="btn-primary-outlined">
+                        Zadzwoń do nas
+                    </a>
+                </div>
+
+                <div class="col-4 col-md-6 col-sm-12 contact-action">
+                    <span class="contact-data">
+                        <i class="icon feather icon-mail"></i>biuro@piambo.pl 
+                    </span>
+
+                    <a href="mailto: biuro@piambo.pl" class="btn-primary-outlined">
+                        Wyślij emaila
+                    </a>
+                </div>
+
+            </div>
+
+        </div>
+
     </main>
 
 
